# oxideav-shorten

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  release-plz.toml
src/: bitreader.rs  bitstream64.rs  bitwriter.rs  bitwriter64.rs  block.rs  codec.rs  decoder.rs  driver.rs  encode_driver.rs  encoder.rs  encoder_trait.rs  error.rs  header.rs  lib.rs  predictor.rs  registry.rs  rice.rs  round2_tests.rs  round3_tests.rs  round4_tests.rs  round5_tests.rs  round6_tests.rs  round7_tests.rs  round9_tests.rs  roundtrip_tests.rs  sequencer.rs  sidecar.rs  stream_iter.rs  varint.rs
tests/: decode_stream_driver.rs  decoder_trait_roundtrip.rs  diff_block_pipeline.rs  encode_stream_lossy_pipeline.rs  encode_stream_pipeline.rs  encoder_blocksize_pipeline.rs  encoder_diff0_pipeline.rs  encoder_diff1_pipeline.rs  encoder_diff2_pipeline.rs  encoder_diff3_pipeline.rs  encoder_driver_emits_qlpc_command.rs  encoder_envelope_roundtrip.rs  encoder_qlpc_autoselect_pipeline.rs  encoder_qlpc_pipeline.rs  encoder_sequencer_pipeline.rs  encoder_trait_roundtrip.rs  encoder_zero_pipeline.rs  f1_diff1_byte_exact.rs  f1_diff1_ffmpeg_byte_exact.rs  f2_bitshift_diff1_u8.rs  f4_zero_diff0_leading_run.rs  filetype_pinned_accessor.rs  header_then_verbatim.rs  housekeeping_pipeline.rs  integration.rs  mean_estimator_pipeline.rs  qlpc_block_pipeline.rs  roundtrip.rs  seek.rs  shnampsk_trailer_strip_then_decode.rs  streaming_iterator_pipeline.rs
