[package]
name = "oxideav-shorten"
version = "0.0.2"
edition = "2021"
rust-version = "1.80"
license = "MIT"
authors = ["Mark Karpeles"]
description = "Pure-Rust Shorten (.shn) lossless audio codec (decoder + DIFFn encoder) for the oxideav framework"
repository = "https://github.com/OxideAV/oxideav-shorten"
homepage = "https://github.com/OxideAV/oxideav-shorten"
readme = "README.md"
keywords = ["multimedia", "audio", "shorten", "lossless", "codec"]
categories = ["multimedia::encoding", "multimedia::audio"]

[features]
default = ["registry"]
# Wire the crate's `register(ctx)` entry point into `oxideav-core`'s
# codec registry. Disable for standalone builds that want the decoder
# without dragging in the framework.
registry = ["dep:oxideav-core"]

[dependencies]
oxideav-core = { version = "0.1", optional = true }
